--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,42 @@ version: '3'
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
+    image: elasticsearch:8.12.2
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      # - ELASTIC_PASSWORD=111111
-      - xpack.security.enabled=false
-      # - xpack.security.enrollment.enabled=true
+      - ELASTICSEARCH_PASSWORD=7PSPdHVz7eSb3mHumLVq
+      - xpack.security.enabled=true
+      - path.repo=/usr/share/elasticsearch/data
+      # - xpack.security.transport.ssl.enabled=true
+      # - xpack.security.transport.ssl.verification_mode=certificate
+      # - xpack.security.transport.ssl.keystore.path=/usr/share/elasticsearch/config/certs/elastic-certificates.p12
+      # - xpack.security.transport.ssl.truststore.path=/usr/share/elasticsearch/config/certs/elastic-certificates.p12
+      # - xpack.security.http.ssl.enabled=true
+      # - xpack.security.http.ssl.keystore.type=PKCS12
+      # - xpack.security.http.ssl.keystore.password=111111
+      # # - xpack.security.http.ssl.client_authentication= required
+      # - xpack.security.http.ssl.keystore.path=/usr/share/elasticsearch/config/certs/elastic-certificates.p12
+      # - xpack.security.http.ssl.truststore.path=/usr/share/elasticsearch/config/certs/elastic-certificates.p12
     volumes:
       - elasticsearch-data:/usr/share/elasticsearch/data
+      # - ./certs:/usr/share/elasticsearch/config/certs
     ports:
       - 9200:9200
-      # - 9300:9300
     networks:
       - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.11.3
+    image: kibana:8.12.2
     container_name: kibana
     volumes:
       - ./kibana.yml:/usr/share/kibana/config/kibana.yml:ro
     environment:
-        # - elasticsearch.username="elastic"
-        # - elasticsearch.password="111111"
-        # - elasticsearch.hosts=["elasticsearch:9200"]
-        # - elasticsearch_ssl_verificationMode="certificate"
-        # - elasticsearch_url="host.docker.internal:9200"
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      # - ELASTICSEARCH_SERVICE_ACCOUNT_TOKEN=generated_token_here
+      # - elasticsearch.username="kibana_system"
+      # - elasticsearch.password="111111"
+      - elasticsearch.hosts=["elasticsearch:9200"]
     ports:
       - 5601:5601
     depends_on:
@@ -40,7 +46,7 @@ services:
       - elastic
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:8.11.3
+    image: logstash:8.12.2
     labels:
       co.elastic.logs/module: logstash
     user: root
@@ -63,9 +69,17 @@ services:
     networks:
       - elastic
 
+  filebeat:
+    image: elastic/filebeat:8.12.2
+    command: filebeat -e -strict.perms=false
+    volumes:
+      - ./filebeat.yml:/usr/share/filebeat/filebeat.yml
+    depends_on:
+      - elasticsearch
+    networks:
+      - elastic
 volumes:
-  elasticsearch-data:
-  # logstashdata:
+  elasticsearch-data:  # Optional volume for Elasticsearch data persistence
 
 networks:
   elastic:
