--- a/kibana.yml
+++ b/kibana.yml
@@ -1,88 +1,6 @@
 server.name: kibana
 server.host: 0.0.0.0
 
-# elasticsearch.username: "elastic"
-# elasticsearch.password: "111111"
-# elasticsearch.serviceAccountToken: "generated_token_here"
-# elasticsearch.hosts: [ "elasticsearch:9200" ]
-monitoring.ui.container.elasticsearch.enabled: true
-monitoring.ui.container.logstash.enabled: true
-
-xpack.fleet.agents.fleet_server.hosts: [ http://fleet-server:8220 ]
-
-# Enable encryption and mutual authentication between cluster nodes
-# xpack.security.transport.ssl:
-#     enabled: true
-#     verification_mode: certificate
-#     key: /etc/elasticsearch/ssl/certs/corp/key.pem
-#     certificate: /etc/elasticsearch/ssl/certs/corp/chain.pem
-#     certificate_authorities: [ "/etc/elasticsearch/ssl/certs/corp/le-ca-RSA-chain.pem", "/etc/elasticsearch/ssl/certs/corp/le-ca.pem", "/etc/elasticsearch/ssl/certs/corp/ca-bundle-chain.pem" ]
-
-# # Enable encryption for HTTP API client connections, such as Kibana, Logstash, and Agents
-# xpack.security.http.ssl:
-#     enabled: true
-#     verification_mode: certificate
-#     key:  /etc/elasticsearch/ssl/certs/corp/key.pem
-#     certificate: /etc/elasticsearch/ssl/certs/corp/chain.pem
-#     certificate_authorities: [ "/etc/elasticsearch/ssl/certs/corp/le-ca.pem", "/etc/elasticsearch/ssl/certs/corp/le-ca-RSA-chain.pem", "/etc/elasticsearch/ssl/certs/corp/ca-bundle-chain.pem" ]
-
-xpack.fleet.outputs:
-  - id: fleet-default-output
-    name: default
-    type: elasticsearch
-    hosts: [ http://elasticsearch:9200 ]
-    is_default: true
-    is_default_monitoring: true
-
-xpack.fleet.packages:
-  - name: fleet_server
-    version: latest
-  - name: system
-    version: latest
-  - name: elastic_agent
-    version: latest
-  - name: apm
-    version: latest
-
-xpack.fleet.agentPolicies:
-  - name: Fleet Server Policy
-    id: fleet-server-policy
-    description: Static agent policy for Fleet Server
-    monitoring_enabled:
-      - logs
-      - metrics
-    package_policies:
-      - name: fleet_server-1
-        package:
-          name: fleet_server
-      - name: system-1
-        package:
-          name: system
-      - name: elastic_agent-1
-        package:
-          name: elastic_agent
-  - name: Agent Policy APM Server
-    id: agent-policy-apm-server
-    description: Static agent policy for the APM Server integration
-    monitoring_enabled:
-      - logs
-      - metrics
-    package_policies:
-      - name: system-1
-        package:
-          name: system
-      - name: elastic_agent-1
-        package:
-          name: elastic_agent
-      - name: apm-1
-        package:
-          name: apm
-        # See the APM package manifest for a list of possible inputs.
-        # https://github.com/elastic/apm-server/blob/v8.5.0/apmpackage/apm/manifest.yml#L41-L168
-        inputs:
-          - type: apm
-            vars:
-              - name: host
-                value: 0.0.0.0:8200
-              - name: url
-                value: http://apm-server:8200
+elasticsearch.hosts: [ http://elasticsearch:9200 ]
+elasticsearch.username: kibana_system
+elasticsearch.password: RQVFNzaXGVlcgEAyyOut
