--- a/logstash.conf
+++ b/logstash.conf
@@ -1,26 +1,60 @@
 input {
     udp {
-        port => "5000"
-        type => syslog
-        codec => json
+      port => "5000"
+      type => syslog
+      codec => json
     }
     tcp {
-        port => "5044"
-        codec => json
+      port => "5044"
+      codec => json
     }
+  #   file {
+  #   path => "./logfiles/*.log"
+  #   start_position => "beginning"
+  #   sincedb_path => "/dev/null"
+  # }
+    # rabbitmq {
+    #   host => "10.100.110.78"
+    #   port => 5672
+    #   user => "admin"
+    #   password => "Sds#2023"
+    #   queue => "check-invoice"
+    #   arguments => {
+    #     "x-message-ttl" => 60000 
+    #     "x-dead-letter-exchange" => "amq.direct"
+    #     "x-dead-letter-routing-key" => "dead-letter-key"
+    #   }
+    #   durable => false
+    #   codec => json
+    #   type => "rabbitmq"
+    # }
 }
 
 filter {
-  # Bạn có thể thêm bất kỳ xử lý filter nào dưới đây nếu cần thiết
 }
 
 
 output {
-  elasticsearch {
-    hosts => "elasticsearch:9200"
-    ssl => false
-    index => "spring-boot-logs"
-    # user => "elastic"
-    # password => "111111"
-  }
+ if [app_name] == "sds.ep.backend" {
+    elasticsearch {
+      hosts => "elasticsearch:9200"
+      user => logstash_system
+      password => j6ZReQM0WeZritVvxgZg
+      index => "sds.ep.backend-%{+YYYY.MM.dd}"
+    }
+  } else if [app_name] == "sds.ep.backend.gas" {
+    elasticsearch {
+      hosts => "elasticsearch:9200"
+      user => logstash_system
+      password => j6ZReQM0WeZritVvxgZg
+      index => "sds.ep.backend.gas-%{+YYYY.MM.dd}"
+    }
+  } 
+  # else {
+  #   elasticsearch {
+  #     hosts => "elasticsearch:9200"
+  #     ssl => false
+  #     index => "sds.ep.backend.server.test"
+  #   }
+  # }
 }
