--- a/logstash.yml
+++ b/logstash.yml
@@ -1,6 +1,7 @@
 http.host: "0.0.0.0"
 path.config: /usr/share/logstash/pipeline
+config.reload.automatic: true
 xpack.monitoring.elasticsearch.hosts: [ "elasticsearch:9200" ]
 xpack.monitoring.enabled: true
-# xpack.monitoring.elasticsearch.username: elastic
-# xpack.monitoring.elasticsearch.password: "111111"
+xpack.management.elasticsearch.username: logstash_system
+xpack.management.elasticsearch.password: j6ZReQM0WeZritVvxgZg
